# teacher-ranking

./: .dockerignore  .env.example  .gitignore  Dockerfile  data.csv  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
.github/workflows/: build.yml
config/: settings.py  urls.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  endpoints.ts  ratings.ts  references.ts  teachers.ts  types.ts
frontend/src/components/layout/: Header.tsx  MobileNav.tsx  ProtectedRoute.tsx  RootLayout.tsx
frontend/src/components/leaderboard/: LeaderboardTable.tsx
frontend/src/components/rating/: RatingForm.tsx  ScoreInput.tsx
frontend/src/components/teacher/: TeacherCard.tsx  TeacherDetail.tsx  TeacherFilters.tsx  TeacherList.tsx
frontend/src/hooks/: useAuth.ts  useAuthContext.ts  useRatings.ts  useReferences.ts  useTeachers.ts
frontend/src/lib/: variants.ts
frontend/src/pages/: HomePage.tsx  LeaderboardPage.tsx  LoginPage.tsx  NextUnratedPage.tsx  RatePage.tsx  TeacherPage.tsx  TeachersPage.tsx
frontend/src/providers/: AuthProvider.tsx
teacher_rank/: admin.py  apps.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
teacher_rank/management/commands/: load_teachers.py
teacher_rank/migrations/: 0001_initial.py  0002_skippedteacher.py  0003_add_rating_like.py  0004_add_anonymous_rating.py  0005_nullable_scores.py
(+2 files in other folders)
