[project]
name = "teacher-ranking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.15",
    "djangorestframework>=3.15.0",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "django-cors-headers>=4.4.0",
]
